$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- fix patching of dnsmasq for ISC leases, dropped when updating dnsmasq to 2.66

- add basic support for run devices
  IMPORTANT: You have to enforce loading the runfw module on the webinterface page System -> Advanced -> Miscellaneous. Tick the checkbox "Enable Ralink USB wireless devices" and reboot!
  add runfw to the kernel modules list
  add function load_kernel_modules() in system.inc which can be used to load kernel modules at an early stage (have a look at rc.bootup)
  add system -> ralink option to config.xml
  fix a bug that caused a warning while using the scheduler with an early configuration
  update a few dates

- Fix a regression in the firmware upgrade page
  Fix a typo in the firmware upgrade instructions

- clarify instructions on firmware upgrade page
  (contributed by Pierre Nast)

- DNS forwarder: add option to log DNS queries, add aliases (CNAMEs) and MXs
  (contributed by Pierre Nast)

- upgrade dnsmasq to 2.66, remove TFTP , auth and DHCPv4 options from dnsmasq

- update some README text

- update go.sh to fix 404 for autconf268 (uses 269 now)

- add ippool utility

- refactoring to support 8.4-RELEASE (remove redunant patches etc)

- Fix Silence RA announce receive log message for WAN interfaces when using dhcp-pd

- Silence RA announce receive log message for WAN interfaces when using dhcp-pd

- Change Build to use SVN for ports, as CVS is depreciated

- Add support for rdnss and dnssl.  RA ipv6 announcement will include Recursive DNS server
  and DNS search list using the same logic as dhcp server does to select these options.

- Add AES 256 option to IPSEC

- Update timezone.tgz with Freebsd8.3 zoneinfo files

- Fix SVG graphs on IE9/10

- Fix IPsec tunnels with endpoint on optional interfaces

- Add job "Wake on LAN" to the scheduler

- Fix corruption check of the scheduler
